fix(header): dark mode button bug

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,84 +52,13 @@
   --current-text-theme: light-dark(var(--palette-black), var(--palette-white));
   --current-background-theme: light-dark(var(--palette-white), var(--palette-black));
   --current-neon-theme: light-dark(var(--palette-neon-blue), var(--palette-neon-green));
-  color-scheme: light dark;
   /* In the moment just work for the scrollbar color theme */
   --neon-text-variant: color-mix(in srgb,
       var(--current-text-theme) 30%,
       var(--current-neon-theme));
+  /* --- */
+  --display-icon-dark: block;
+  --display-icon-light: none;
 
-  &:is(html[theme]) {
-    &:is(html[theme="light"]) {
-      color-scheme: light;
-    }
-  }
-
-  &:is(:not(html[theme])) {
-    &:has(#dark-mode-button:checked) {
-      color-scheme: dark;
-    }
-  }
-}
-
-html {
-  scroll-behavior: smooth;
-
-  & body {
-    font-family:
-      "Space Grotesk",
-      system-ui,
-      -apple-system,
-      BlinkMacSystemFont,
-      "Segoe UI",
-      Roboto,
-      Oxygen,
-      Ubuntu,
-      Cantarell,
-      "Open Sans",
-      "Helvetica Neue",
-      sans-serif;
-    display: grid;
-    padding-bottom: 80px;
-    transition-duration: 0.2s;
-    transition-property: color, background-color;
-    transition-timing-function: ease;
-    background-color: var(--current-background-theme);
-    color: var(--current-text-theme);
-
-    @media (pointer: coarse) {
-      padding-bottom: 240px;
-    }
-
-    &>* {
-      padding-inline: 16px;
-    }
-
-    & main {
-      --section-scroll-margin-top: 5rem;
-      max-width: 80ch;
-      justify-self: center;
-      display: flex;
-      flex-direction: column;
-      gap: 160px;
-
-      @media (pointer: coarse) {
-        --section-scroll-margin-top: 16px;
-      }
-
-      & section[id] {
-        scroll-margin-top: var(--section-scroll-margin-top);
-
-        & .section-title {
-          font-size: 2rem;
-          font-weight: extrabold;
-          font-family: var(--font-family-title);
-          -webkit-text-stroke: 1px var(--neon-text-variant);
-        }
-      }
-    }
-
-    & .counter {
-      display: none;
-    }
-  }
+  color-scheme: light dark;
 }
